[workspace]
members = [
    "rs/conducer",
    "rs/hang",
    "rs/libmoq",
    "rs/moq-cli",
    "rs/moq-clock",
    "rs/moq-ffi",
    "rs/moq-lite",
    "rs/moq-msf",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-relay",
    "rs/moq-token",
    "rs/moq-token-cli",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
conducer = { version = "0.3", path = "rs/conducer" }
hang = { version = "0.15", path = "rs/hang" }
moq-lite = { version = "0.15", path = "rs/moq-lite" }
moq-msf = { version = "0.1", path = "rs/moq-msf" }
moq-mux = { version = "0.3", path = "rs/moq-mux" }
moq-native = { version = "0.13", path = "rs/moq-native", default-features = false }
moq-token = { version = "0.5", path = "rs/moq-token" }
qmux = { version = "0.0.5", default-features = false }

serde = { version = "1", features = ["derive"] }
tokio = "1.48"
web-async = { version = "0.1.3", features = ["tracing"] }
web-transport-iroh = "0.2"
web-transport-noq = "0.0.3"
web-transport-proto = "0.5"
web-transport-quiche = "0.2"
web-transport-quinn = "0.11"
web-transport-trait = "0.3.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
# frame pointers: pass RUSTFLAGS="-C force-frame-pointers=yes" when building

[profile.release-with-debug]
inherits = "release"
debug = true
