[workspace]
members = [
    "rs/hang",
    "rs/kio",
    "rs/libmoq",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-boy",
    "rs/moq-cli",
    "rs/moq-ffi",
    "rs/moq-flate",
    "rs/moq-gst",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-net",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-token",
    "rs/moq-token-cli",
    "rs/moq-video",
]
default-members = [
    "rs/kio",
    "rs/hang",
    # "rs/libmoq",    # requires C toolchain
    "rs/moq-boy",
    "rs/moq-audio",
    "rs/moq-bench",
    "rs/moq-cli",
    # "rs/moq-ffi",   # requires Python/maturin
    # "rs/moq-gst",   # requires GStreamer
    "rs/moq-flate",
    "rs/moq-hls",
    "rs/moq-json",
    "rs/moq-loc",
    "rs/moq-msf",
    "rs/moq-net",
    "rs/moq-mux",
    "rs/moq-native",
    "rs/moq-relay",
    "rs/moq-rtc",
    "rs/moq-rtmp",
    "rs/moq-srt",
    "rs/moq-token",
    "rs/moq-token-cli",
    "rs/moq-video",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
flate2 = "1"
hang = { version = "0.19", path = "rs/hang" }
kio = { version = "0.4", path = "rs/kio" }
moq-audio = { version = "0.0.6", path = "rs/moq-audio" }
moq-flate = { version = "0.1.0", path = "rs/moq-flate" }
moq-hls = { version = "0.0.1", path = "rs/moq-hls", default-features = false }
moq-json = { version = "0.1.1", path = "rs/moq-json" }
moq-loc = { version = "0.1", path = "rs/moq-loc" }
moq-msf = { version = "0.3", path = "rs/moq-msf" }
moq-mux = { version = "0.7", path = "rs/moq-mux" }
moq-native = { version = "0.17", path = "rs/moq-native", default-features = false }
moq-net = { version = "0.1", path = "rs/moq-net" }
moq-token = { version = "0.6", path = "rs/moq-token" }
moq-video = { version = "0.0.6", path = "rs/moq-video" }
qmux = { version = "0.2", default-features = false }

serde = { version = "1", features = ["derive"] }
tokio = "1.48"
web-async = { version = "0.1.3", features = ["tracing"] }
web-transport-iroh = "0.6"
web-transport-noq = "0.2.0"
web-transport-proto = "0.6"
web-transport-quiche = "0.4"
web-transport-quinn = "0.11"
web-transport-trait = "0.3.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
# frame pointers: pass RUSTFLAGS="-C force-frame-pointers=yes" when building

[profile.release-with-debug]
inherits = "release"
debug = true
