# Non-published workspace root: holds shared dev tooling + uv workspace config.
[project]
name = "moq"
version = "0.0.0"
requires-python = ">=3.10"

# Listed explicitly (not `py/*`) so build output like py/dist isn't mistaken
# for a workspace member.
[tool.uv.workspace]
members = ["py/moq-ffi", "py/moq-rs"]

[dependency-groups]
dev = ["ruff", "maturin", "pyright", "pytest", "pytest-asyncio"]

# Tests span both workspace members (py/moq-rs, py/moq-ffi). pytest resolves
# its rootdir to this workspace root, so the shared asyncio config lives here.
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.10"
include = ["py"]
# Skip uniffi-bindgen output: it's regenerated on every build and isn't
# expected to pass our type checks.
exclude = ["**/_uniffi"]

[tool.ruff]
line-length = 120
target-version = "py310"
# Skip uniffi-bindgen output (regenerated on every build).
extend-exclude = ["**/_uniffi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
