[package]
name = "moq-drone"
description = "Media over QUIC - Drone Demo"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[features]
default = ["quinn", "websocket"]
quinn = ["moq-native/quinn"]
websocket = ["moq-native/websocket"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "8"
hang = { workspace = true }
hex = "0.4"
moq-lite = { workspace = true }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = false, features = ["aws-lc-rs"] }
rand = "0.9"
rapier2d = "0.32"
serde = { workspace = true }
serde_json = "1"
tiny-skia = "0.12"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
url = "2"
