[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moq-lite"
version = "0.1.0"
description = "Deprecated: renamed to moq-net. This package re-exports moq-net for backwards compatibility and will not receive further updates."
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Luke Curley", email = "kixelated@gmail.com" }]
keywords = ["quic", "http3", "webtransport", "media", "live", "streaming"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = ["moq-net"]

[tool.uv.sources]
moq-net = { workspace = true }

[project.urls]
Homepage = "https://github.com/moq-dev/moq"
Repository = "https://github.com/moq-dev/moq"
