[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "moq-rs"
# Version is injected at build time from the moq-ffi-v* tag (see
# .github/workflows/release-py.yml). For local dev `maturin develop`
# reads it from rs/moq-ffi/Cargo.toml.
dynamic = ["version"]
description = "Python bindings for the Media over QUIC Rust crates: real-time pub/sub with built-in caching, fan-out, and prioritization."
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Luke Curley", email = "kixelated@gmail.com" }]
keywords = ["quic", "http3", "webtransport", "media", "live", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/moq-dev/moq"
Repository = "https://github.com/moq-dev/moq"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Maturin builds the rs/moq-ffi crate, runs uniffi-bindgen, and packages
# the cdylib + generated bindings as a private `moq._uniffi` subpackage
# (the leading underscore signals "internal"; the public API lives at the
# top of moq). The PyPI distribution is `moq-rs` but the import name is
# `moq` for ergonomics.
[tool.maturin]
bindings = "uniffi"
manifest-path = "../../rs/moq-ffi/Cargo.toml"
python-source = "."
module-name = "moq._uniffi"
