[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dist name is moq-rs but the import package is `moq`, so point hatchling at it.
[tool.hatch.build.targets.wheel]
packages = ["moq"]

[project]
name = "moq-rs"
# Distribution is `moq-rs` (the `moq` name is taken on PyPI); the import name
# stays `moq`. Versioned independently of the moq-ffi crate: bump this by hand
# in a PR. On merge to main, release-py.yml publishes to PyPI if this version
# isn't already there (no tag needed; the registry is the gate).
# Starts at 0.3.0 to open a new line above the old lockstep 0.2.x releases that
# bundled the bindings.
version = "0.3.0"
description = "Media over QUIC: real-time pub/sub with built-in caching, fan-out, and prioritization, with a Pythonic API. Import as `moq`."
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Luke Curley", email = "kixelated@gmail.com" }]
keywords = ["quic", "http3", "webtransport", "media", "live", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
# Compatible-release pin: floats to the latest 0.2.x moq-ffi patch without a
# wrapper re-release. A moq-ffi minor bump (0.3) is the only thing that forces
# bumping this constraint.
dependencies = ["moq-ffi ~= 0.2.16"]

[project.urls]
Homepage = "https://github.com/moq-dev/moq"
Repository = "https://github.com/moq-dev/moq"

# Local dev resolves moq-ffi from the workspace member rather than PyPI.
[tool.uv.sources]
moq-ffi = { workspace = true }
