[package]
name = "conducer"
description = "Easy async"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.3.1"
edition = "2024"
rust-version.workspace = true

keywords = ["async", "producer", "consumer", "state", "sync"]
categories = ["asynchronous", "concurrency"]
