[package]
name = "hang"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.15.2"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buf-list = "1"
bytes = "1"
conducer = { workspace = true }
hex = "0.4"
lazy_static = "1"
moq-lite = { workspace = true, features = ["serde"] }
regex = "1"
serde = { workspace = true }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
thiserror = "2"
tokio = { workspace = true, features = ["macros", "fs"] }
tracing = "0.1"
url = "2"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug"]

[dev-dependencies]
anyhow = "1"
moq-native = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["test-util"] }
