[package]
name = "hang"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.19.3"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hex = "0.4"
lazy_static = "1"
moq-net = { workspace = true, features = ["serde"] }
regex = "1"
serde = { workspace = true }
serde_json = "1"
serde_with = { version = "3", features = ["base64", "hex"] }
thiserror = "2"
url = "2"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug"]

[dev-dependencies]
anyhow = "1"
moq-mux = { path = "../moq-mux" }
moq-native = { path = "../moq-native" }
tokio = { workspace = true, features = ["macros", "fs"] }
tracing = "0.1"
url = "2"
