[package]
name = "libmoq"
description = "Media over QUIC, C bindings"
authors = ["Luke Curley <kixelated@gmail.com>", "Brian Medley <bpm@bmedley.org>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.2.13"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "moq"
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
hang = { workspace = true }
moq-lite = { workspace = true, features = ["serde"] }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = true }
thiserror = "2"
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1"
url = "2"

[build-dependencies]
cbindgen = "0.29"
