[package]
name = "moq-audio"
description = "Native audio encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "audio"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[lib]
doctest = false

[dependencies]
bytes = "1"
hang = { workspace = true }
moq-mux = { workspace = true }
moq-net = { workspace = true }
# We only use the sinc resampler (Async::new_sinc), so skip the default
# fft_resampler feature and its RustFFT/realfft dependencies.
rubato = { version = "3.0", default-features = false }
thiserror = "2"
# Pure-Rust transpilation of libopus 1.3.1. No CMake toolchain, no C
# linker hackery, and crucially still maintained, unlike the
# `opus`/`audiopus_sys` combo which is stuck on a 5-year-old vendored
# libopus that breaks under CMake 4 (RUSTSEC-2026-0150). Trade-off:
# ~20% slower than the C version with intrinsics enabled, but for the
# 20 ms Opus frames moq-audio publishes that's still well under any
# real-time budget.
unsafe-libopus = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
