[package]
name = "moq-bench"
description = "Media over QUIC - Load generator for benchmarking relays"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

publish = false

[[bin]]
name = "moq-bench"
path = "src/main.rs"
doc = false

[features]
default = ["quinn", "websocket"]
iroh = ["moq-native/iroh"]
quinn = ["moq-native/quinn"]
quiche = ["moq-native/quiche"]
websocket = ["moq-native/websocket"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "env"] }
humantime = "2.3"
humantime-serde = "1.1"
moq-native = { workspace = true, default-features = false, features = ["aws-lc-rs"] }
moq-net = { workspace = true, features = ["serde"] }
rand = "0.10.1"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
toml = "1.1"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
