[package]
name = "moq-boy"
description = "MoQ Boy - Crowd-controlled Game Boy streaming"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"
keywords = ["moq", "gameboy", "streaming", "emulator", "live"]
categories = ["multimedia::video", "emulators", "network-programming"]

version = "0.2.4"
edition = "2024"
rust-version.workspace = true

[features]
default = ["quinn", "websocket"]
quinn = ["moq-native/quinn"]
websocket = ["moq-native/websocket"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
boytacean = { version = "0.11", features = ["gen-mock"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "8"
hang = { workspace = true }
moq-lite = { workspace = true }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = false, features = ["aws-lc-rs"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
url = "2"
